--- a/sre-beca-lab-microservices-Plantio_SRE_2_Lab_1_Equipe_2/.project
+++ b/sre-beca-lab-microservices-Plantio_SRE_2_Lab_1_Equipe_2/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>sre-beca-lab-microservices-Plantio_SRE_2_Lab_1_Equipe_2</name>
+	<name>.org.eclipse.egit.core.cmp</name>
 	<comment></comment>
 	<projects>
 	</projects>
